improve profile popup (hide empty fields, fix scrollbar issue)

--- a/css/profile.css
+++ b/css/profile.css
@@ -231,6 +231,9 @@
     margin-left: -300px;
 
 }
+.profile-modal .modal-header, .profile-modal .profile-card {
+    z-index: 1;
+}
 .profile-modal .modal-content
 {
     padding: 3px;
@@ -250,9 +253,10 @@
     text-align: center;
 }
 #msngrswr {
-    position: absolute;
-    left: 10px;
+    display: none;
+    margin-left: 10px;
     margin-top: 10px;
+    height: 40px;
 }
 #toxbtnwr, #bmbtnwr {
     float: left;
@@ -315,7 +319,6 @@
 {
     display: inline-block;
     margin-left: -4px;
-    margin-top: 40px;
     border-bottom: 0;
 }
 button.follow:hover {
@@ -349,9 +352,13 @@ button.follow:hover {
 }
 .profile-modal .postboard-posts
 {
-    display: block;
-    height: 90%;
+    position: absolute;
+    top: 0;
+    height: 100%;
+    box-sizing: border-box;
+    border-top: 292px solid transparent;
     overflow: auto;
+    z-index: 0;
 }
 .profile-modal .profile-card-main
 {
@@ -401,4 +408,17 @@ h2.profile-screen-name {
 
 .profile-modal .modal-buttons {
    display: none;
+}
+
+.profile-modal h1.profile-name,
+.profile-modal h2.profile-screen-name,
+.profile-modal span.profile-location,
+.profile-modal a.profile-url {
+    display: block;
+}
+
+.profile-modal span.profile-location:empty,
+.profile-modal a.profile-url:empty,
+.profile-modal a.profile-bio:empty {
+    display: none;
 }
